# gwtc

./: .pre-commit-config.yaml  README.md  environment.yml  pyproject.toml
notebooks/: gwtc.ipynb  gwtc_read_localization_dataset.ipynb
src/gwtc/: events.py  parse.py  source.py  utils.py
src/gwtc/scripts/: get_localizations.py  get_maximum_likelihood_values.py
